{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Gameplay",
            "id": "c4f29ba6-ef22-4361-9ff8-f370f97d72d2",
            "actions": [
                {
                    "name": "StrafeLeft",
                    "type": "Button",
                    "id": "017a83fb-d0fc-401f-b484-ad383eea5f52",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "StrafeRight",
                    "type": "Button",
                    "id": "0c8b5ec7-b17a-43bc-b10c-c844dff27a4d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "8925c93e-f6d7-4923-a0eb-b1f2741c929e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Slide",
                    "type": "Button",
                    "id": "98c493e8-f7ba-4c72-bedb-25f72f4dc234",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0af8d861-e149-4f47-b86e-28a732f06f9a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StrafeLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7dbf0f2c-3eed-4584-a0ad-7c9661aeb1d6",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StrafeRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3cfd44ad-9691-4c5b-a745-5ec1370a6d47",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "184ddc64-c433-4bc5-91d5-489d003d73ee",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slide",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}